@@ -1,7 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2013-2015 Denis Forveille (titou10.titou10@gmail.com)
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +21,10 @@ import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
-import org.eclipse.swt.widgets.*;
+import org.eclipse.swt.widgets.Combo;
+import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Control;
+import org.eclipse.swt.widgets.Shell;
 import org.jkiss.dbeaver.ext.db2.ui.internal.DB2Messages;
 import org.jkiss.dbeaver.ui.UIUtils;
 import org.jkiss.utils.CommonUtils;
@@ -39,7 +41,7 @@ import java.util.List;
 public class DB2TablespaceChooser extends Dialog {
 
     private String selectedTablespace;
-    private List<String> listTablespaceNames;
+    private final List<String> listTablespaceNames;
 
     public DB2TablespaceChooser(Shell parentShell, List<String> listTablespaceNames)
     {
@@ -58,7 +60,12 @@ public class DB2TablespaceChooser extends Dialog {
     {
         getShell().setText(DB2Messages.dialog_explain_choose_tablespace);
         Composite composite = (Composite) super.createDialogArea(parent);
-        Group infoGroup = UIUtils.createControlGroup(composite, DB2Messages.dialog_explain_choose_tablespace_tablespace, 1, GridData.FILL_BOTH, 0);
+        Composite infoGroup = UIUtils.createTitledComposite(
+            composite,
+            DB2Messages.dialog_explain_choose_tablespace_tablespace,
+            1,
+            GridData.FILL_BOTH
+        );
 
         // Add combo box with the tablespaces
         final Combo tsCombo = new Combo(infoGroup, SWT.DROP_DOWN | SWT.READ_ONLY);
@@ -68,7 +75,7 @@ public class DB2TablespaceChooser extends Dialog {
             tsCombo.add(tablespaceName);
         }
         if(!CommonUtils.isEmpty(listTablespaceNames)){
-            selectedTablespace = listTablespaceNames.get(0);
+            selectedTablespace = listTablespaceNames.getFirst();
         }
         tsCombo.select(0);
         tsCombo.setEnabled(true);
