@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,10 +37,7 @@ import org.eclipse.ui.internal.WorkbenchPlugin;
 import org.eclipse.ui.internal.ide.ChooseWorkspaceDialog;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
-import org.jkiss.dbeaver.DBeaverPreferences;
-import org.jkiss.dbeaver.Log;
-import org.jkiss.dbeaver.LogOutputStream;
-import org.jkiss.dbeaver.ModelPreferences;
+import org.jkiss.dbeaver.*;
 import org.jkiss.dbeaver.core.DBeaverActivator;
 import org.jkiss.dbeaver.core.DesktopPlatform;
 import org.jkiss.dbeaver.core.DesktopUI;
@@ -53,7 +50,6 @@ import org.jkiss.dbeaver.model.cli.CLIProcessResult;
 import org.jkiss.dbeaver.model.impl.app.BaseWorkspaceImpl;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.model.rcp.DesktopApplicationImpl;
-import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.registry.ApplicationPolicyProvider;
 import org.jkiss.dbeaver.registry.BasePlatformImpl;
 import org.jkiss.dbeaver.registry.SWTBrowserRegistry;
@@ -69,7 +65,10 @@ import org.jkiss.dbeaver.ui.app.standalone.update.VersionUpdateDialog;
 import org.jkiss.dbeaver.utils.GeneralUtils;
 import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.dbeaver.utils.SystemVariablesResolver;
-import org.jkiss.utils.*;
+import org.jkiss.utils.ArrayUtils;
+import org.jkiss.utils.CommonUtils;
+import org.jkiss.utils.IOUtils;
+import org.jkiss.utils.StandardConstants;
 import org.osgi.framework.Version;
 
 import java.io.*;
@@ -100,7 +99,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     static final String VERSION_PROP_PRODUCT_NAME = "product-name";
     static final String VERSION_PROP_PRODUCT_VERSION = "product-version";
 
-    private static final String PROP_EXIT_DATA = IApplicationContext.EXIT_DATA_PROPERTY; //$NON-NLS-1$
     private static final String PROP_EXIT_CODE = "eclipse.exitcode"; //$NON-NLS-1$
 
     public static final String DEFAULT_WORKSPACE_FOLDER = "workspace6";
@@ -113,7 +111,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     private static final String DEFAULT_PROJECT_NAME = "General";
 
     private final Path FILE_WITH_WORKSPACES;
-    private final String WORKSPACE_DIR_CURRENT;
+    private final Path defaultWorkspacePath;
 
     static boolean WORKSPACE_MIGRATED = false;
 
@@ -153,7 +151,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         String workingDirectory = RuntimeUtils.getWorkingDirectory(defaultWorkspaceLocation);
 
         // Workspace dir
-        WORKSPACE_DIR_CURRENT = new File(workingDirectory, defaultAppWorkspaceName).getAbsolutePath();
+        defaultWorkspacePath = Path.of(workingDirectory).resolve(defaultAppWorkspaceName);
         FILE_WITH_WORKSPACES = Paths.get(workingDirectory, defaultWorkspacesFile); //$NON-NLS-1$
     }
 
@@ -180,17 +178,12 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     @Override
     public Object start(IApplicationContext context) {
         instance = this;
+        // hide standard Eclipse exit message if exit code is not OK (otherwise it may be confusing)
+        System.setProperty(ECLIPSE_EXIT_DATA, "");
 
         var args = preprocessCommandLine();
         Location instanceLoc = Platform.getInstanceLocation();
-
-        String defaultHomePath = getDefaultInstanceLocation();
-
-        if (!isWorkspaceSwitchingAllowed() && !WORKSPACE_DIR_CURRENT.equals(defaultHomePath)) {
-            log.error("Workspace switching is not allowed when participating in the early access program. Exiting "
-                + GeneralUtils.getProductName() + ".");
-            return IApplication.EXIT_OK;
-        }
+        Path defaultHomePath = getDefaultInstanceLocation();
 
         boolean ideWorkspaceSet = setIDEWorkspace(instanceLoc);
 
@@ -217,7 +210,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
                     }
                 }
             } catch (Exception e) {
-                e.printStackTrace();
+                e.printStackTrace(System.out);
             }
         }
 
@@ -225,6 +218,25 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
         // Register core components
         initializeApplicationServices();
+
+        final Runtime runtime = Runtime.getRuntime();
+
+        // Debug logger
+        initDebugWriter();
+
+        try {
+            DBWorkbench.addInitializeHook((platform) -> {
+                try {
+                    initializeApplication();
+                } catch (Exception e) {
+                    showMessageBox("Error initializing application", e.getMessage(), SWT.ICON_ERROR);
+                    throw e;
+                }
+            });
+        } catch (DBException e) {
+            log.error("Error initializing application", e);
+            return IApplication.EXIT_OK;
+        }
 
         // Custom parameters
         try {
@@ -238,11 +250,11 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
                             System.out.println(res);
                         }
                     }
-                    return IApplication.EXIT_OK;
+                    return cliProcessResult.getExitCode();
                 }
             } catch (Exception e) {
                 log.error("Error processing command line parameters", e);
-                return IApplication.EXIT_OK;
+                return CLIConstants.EXIT_CODE_ERROR;
             }
         } finally {
             headlessMode = false;
@@ -253,19 +265,23 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             return IApplication.EXIT_OK;
         }
 
-        final Runtime runtime = Runtime.getRuntime();
-
-        initializeConfiguration();
-
-        // Debug logger
-        initDebugWriter();
-
         log.debug(GeneralUtils.getProductName() + " " + GeneralUtils.getProductVersion() + " is starting"); //$NON-NLS-1$
         log.debug("OS: " + System.getProperty(StandardConstants.ENV_OS_NAME) + " " + System.getProperty(StandardConstants.ENV_OS_VERSION) + " (" + System.getProperty(StandardConstants.ENV_OS_ARCH) + ")");
         log.debug("Java version: " + System.getProperty(StandardConstants.ENV_JAVA_VERSION) + " by " + System.getProperty(StandardConstants.ENV_JAVA_VENDOR) + " (" + System.getProperty(StandardConstants.ENV_JAVA_ARCH) + "bit)");
         log.debug("Install path: '" + SystemVariablesResolver.getInstallPath() + "'"); //$NON-NLS-1$ //$NON-NLS-2$
         log.debug("Instance path: '" + instanceLoc.getURL() + "'"); //$NON-NLS-1$ //$NON-NLS-2$
         log.debug("Memory available " + (runtime.totalMemory() / (1024 * 1024)) + "Mb/" + (runtime.maxMemory() / (1024 * 1024)) + "Mb");
+
+        try {
+            DBWorkbench.getPlatform();
+        } catch (Throwable e) {
+            if (e instanceof DBRuntimeException re) {
+                e = re.getCause();
+            }
+            log.debug(e);
+            showMessageBox("Error initializing platform", CommonUtils.getAllExceptionMessages(e), SWT.ICON_ERROR);
+            return IApplication.EXIT_OK;
+        }
 
         // Write version info
         writeWorkspaceInfo();
@@ -280,10 +296,13 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             SWTBrowserRegistry.overrideBrowser();
         }
 
-        DBWorkbench.getPlatform();
+        if (!isWorkspaceSwitchingAllowed() && !defaultWorkspacePath.equals(defaultHomePath)) {
+            log.error("Workspace switching is not allowed when participating in the early access program. Exiting "
+                + GeneralUtils.getProductName() + ".");
+            return IApplication.EXIT_OK;
+        }
 
         WorkbenchPatcher.patchWorkbenchXmi(instanceLoc);
-        initializeApplication();
 
         // Run instance server
         try {
@@ -309,7 +328,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             ApplicationWorkbenchAdvisor.DBEAVER_SCHEME_NAME);
         try {
             log.debug("Run workbench");
-            getDisplay();
             int returnCode = PlatformUI.createAndRunWorkbench(display, createWorkbenchAdvisor());
 
             // Copy-pasted from IDEApplication
@@ -354,7 +372,11 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
                 break;
             }
         }
-        DBeaverCommandLine.getInstance().preprocessCommandLine(args);
+        try {
+            args = DBeaverCommandLine.getInstance().preprocessCommandLine(args);
+        } catch (DBException e) {
+            log.error("Error preprocessing command line", e);
+        }
         return args;
     }
 
@@ -365,7 +387,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             isReadOnlyField.set(instanceLoc, true);
         } catch (Throwable e) {
             // ignore
-            e.printStackTrace();
+            e.printStackTrace(System.err);
         }
     }
 
@@ -377,15 +399,14 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             return false;
         }
         String lastWorkspace = DBeaverWorkspaces.fetchRecentWorkspaces(this, instanceLoc).getFirst();
-        if (!WORKSPACE_DIR_CURRENT.equals(lastWorkspace)) {
+        if (!CommonUtils.isEmpty(lastWorkspace)) {
             try {
-                final URL selectedWorkspaceURL = new URL(
-                    "file",  //$NON-NLS-1$
-                    null,
-                    lastWorkspace);
-                instanceLoc.set(selectedWorkspaceURL, true);
-
-                return true;
+                Path lwPath = Path.of(lastWorkspace);
+                if (!defaultWorkspacePath.equals(lwPath)) {
+                    final URL selectedWorkspaceURL = lwPath.toUri().toURL();
+                    instanceLoc.set(selectedWorkspaceURL, true);
+                    return true;
+                }
             } catch (Exception e) {
                 log.debug("Can't set IDE workspace to '" + lastWorkspace + "'", e);
             }
@@ -403,7 +424,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
     @NotNull
     public Path getDefaultWorkingFolder() {
-        return Path.of(WORKSPACE_DIR_CURRENT);
+        return defaultWorkspacePath;
     }
 
     @NotNull
@@ -417,15 +438,15 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         return isHeadlessMode() ? ConsoleUserInterface.class : DesktopUI.class;
     }
 
-    public String getDefaultInstanceLocation() {
-        String defaultHomePath = WORKSPACE_DIR_CURRENT;
+    public Path getDefaultInstanceLocation() {
+        Path defaultHomePath = defaultWorkspacePath;
         Location instanceLoc = Platform.getInstanceLocation();
         if (instanceLoc.isSet()) {
             try {
-                defaultHomePath = RuntimeUtils.getLocalFileFromURL(instanceLoc.getURL()).getAbsolutePath();
+                defaultHomePath = RuntimeUtils.getLocalFileFromURL(instanceLoc.getURL());
             } catch (IOException e) {
                 System.err.println("Unable to resolve workspace location " + instanceLoc);
-                e.printStackTrace();
+                e.printStackTrace(System.err);
             }
         }
         return defaultHomePath;
@@ -453,7 +474,11 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
     }
 
-    protected void initializeConfiguration() {
+    /**
+     * May be overrided in implementors
+     */
+    protected void initializeApplication() throws DBException {
+        // Configure network
         ModelPreferences.IPType stack = ModelPreferences.IPType.getPreferredStack();
         if (stack != ModelPreferences.IPType.AUTO) {
             System.setProperty("java.net.preferIPv4Stack", String.valueOf(stack == ModelPreferences.IPType.IPV4));
@@ -466,12 +491,8 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         if (debugNetworkConnections) {
             System.setProperty("javax.net.debug", "all");
         }
-    }
 
-    /**
-     * May be overrided in implementors
-     */
-    protected void initializeApplication() {
+        // Policy
         if (ApplicationPolicyProvider.getInstance().isPolicyEnabled(POLICY_WD_CHECK_SUPPRESS)) {
             try {
                 WindowsDefenderConfigurator.savePreference(
@@ -493,7 +514,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             display = Display.getCurrent();
             if (display == null) {
                 display = PlatformUI.createDisplay();
-                overrideThemeValues();
             }
 
             // Check for resource leaks
@@ -502,25 +522,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
             addIdleListeners();
         }
         return display;
-    }
-
-    /**
-     * See {@code org.jkiss.dbeaver.ui.swt.linux}
-     */
-    private void overrideThemeValues() {
-        if (!RuntimeUtils.isLinux() || System.getProperty("org.eclipse.swt.internal.gtk.noThemingFixes") != null) {
-            return;
-        }
-        try {
-            BeanUtils.invokeStaticMethod(
-                Class.forName("org.eclipse.swt.GtkCssHelper"),
-                "overrideThemeValues",
-                new Class[] {},
-                new Object[] {}
-            );
-        } catch (Throwable e) {
-            log.error("Error overriding theme values", e);
-        }
     }
 
     private void addIdleListeners() {
@@ -532,11 +533,10 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     private boolean setDefaultWorkspacePath(Location instanceLoc) {
-        String defaultHomePath = WORKSPACE_DIR_CURRENT;
-        final Path homeDir = Path.of(defaultHomePath);
+        Path defaultHomePath = defaultWorkspacePath;
         try {
-            if (!Files.exists(homeDir) || isEmptyFolder(homeDir)) {
-                if (!tryMigrateFromPreviousVersion(homeDir)) {
+            if (!Files.exists(defaultHomePath) || isEmptyFolder(defaultHomePath)) {
+                if (!tryMigrateFromPreviousVersion(defaultHomePath)) {
                     return false;
                 }
             }
@@ -545,10 +545,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         }
         try {
             // Make URL manually because file.toURI().toURL() produces bad path (with %20).
-            final URL defaultHomeURL = new URL(
-                "file",  //$NON-NLS-1$
-                null,
-                defaultHomePath);
+            final URL defaultHomeURL = defaultHomePath.toUri().toURL();
             boolean keepTrying = true;
             while (keepTrying) {
                 if (instanceLoc.isLocked() || !instanceLoc.set(defaultHomeURL, true)) {
@@ -610,27 +607,20 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
         }
         if (previousVersionWorkspaceDir != null) {
             DBeaverSettingsImporter importer = new DBeaverSettingsImporter(this, getDisplay());
-            if (!importer.migrateFromPreviousVersion(previousVersionWorkspaceDir.toFile(), homeDir.toFile())) {
-                return false;
-            }
+            return importer.migrateFromPreviousVersion(previousVersionWorkspaceDir.toFile(), homeDir.toFile());
         }
         return true;
     }
 
     private void writeWorkspaceInfo() {
         Path defaultDir = getDefaultWorkingFolder();
-        Path metadataFolder;
-        if (defaultDir != null) {
-            metadataFolder = defaultDir.resolve(DBPWorkspace.METADATA_FOLDER);
-            if (!Files.exists(metadataFolder)) {
-                try {
-                    Files.createDirectories(metadataFolder);
-                } catch (IOException e) {
-                    System.err.println("Error creating metadata folder '" + metadataFolder + "': " + e.getMessage());
-                }
+        Path metadataFolder = defaultDir.resolve(DBPWorkspace.METADATA_FOLDER);
+        if (!Files.exists(metadataFolder)) {
+            try {
+                Files.createDirectories(metadataFolder);
+            } catch (IOException e) {
+                System.err.println("Error creating metadata folder '" + metadataFolder + "': " + e.getMessage());
             }
-        } else {
-            metadataFolder = GeneralUtils.getMetadataFolder();
         }
         Properties props = BaseWorkspaceImpl.readWorkspaceInfo(metadataFolder);
         props.setProperty(VERSION_PROP_PRODUCT_NAME, GeneralUtils.getProductName());
@@ -678,7 +668,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
 
             log.debug("DBeaver shutdown completed"); //$NON-NLS-1$
 
-            stopDebugWriter();
+            //stopDebugWriter();
         }
     }
 
@@ -715,7 +705,6 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     @Nullable
-    @Override
     public IInstanceController getInstanceServer() {
         return instanceServer;
     }
@@ -768,7 +757,7 @@ public class DBeaverApplication extends DesktopApplicationImpl implements DBPApp
     }
 
     @Override
-    public String getInfoDetails(DBRProgressMonitor monitor) {
+    public String getInfoDetails() {
         return null;
     }
 
